# mailcow-monobear-addons

./: .gitignore  LICENSE  entry-dovecot.sh  requirements.txt  setup.cfg  setup.py  testPasswordLogin.sh
src/monobear/: __init__.py
src/monobear/checkpassword/: __init__.py  __main__.py  securitychecker.py
