[metadata]
name = Monobears Mailcow Addons
# Version needs regex in setup.py.
url = https://github.com/monofox/mailcow-monobear-addons
project_urls =
    Documentation = https://github.com/monofox/mailcow-monobear-addons/
    Code = https://github.com/monofox/mailcow-monobear-addons/
    Issue tracker = https://github.com/monofox/mailcow-monobear-addons/issues
license = MIT
author = Lukas Schreiner
author_email = dev@lschreiner.de
maintainer = Lukas Schreiner
maintainer_email = dev@lschreiner.de
description = Addons for Mailcow to e.g. check password strength and inform user.
#long_description = file: README.md
#long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Utilities

[options]
packages = find:
package_dir = = src
include_package_data = true
python_requires = >= 3.6
# Dependencies are in setup.py

[options.packages.find]
where = src

#[options.entry_points]
#console_scripts =
#    mailcow-mbear = mailcow-mbear.cli:main

[flake8]
# B = bugbear
# E = pycodestyle errors
# F = flake8 pyflakes
# W = pycodestyle warnings
# B9 = bugbear opinions
# ISC = implicit-str-concat
select = B, E, F, W, B9, ISC
ignore =
    # slice notation whitespace, invalid
    E203
    # import at top, too many circular import fixes
    E402
    # line length, handled by bugbear B950
    E501
    # bare except, handled by bugbear B001
    E722
    # bin op line break, invalid
    W503
# up to 88 allowed by bugbear B950
max-line-length = 80
